--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-dailog-for-power",
+  "name": "my-dialog-for-power",
   "version": "1.0.0",
   "description": "一个自定义的弹窗插件",
   "main": "index.js",
