--- a/my-dialog-power/package.json
+++ b/my-dialog-power/package.json
@@ -1,14 +1,14 @@
 {
   "name": "my-dialog-power",
-  "version": "0.1.3",
-  "main": "dist/my-dialog-power.common.js",
-  "style":"dist/my-dialog-power.css",
+  "version": "0.1.6",
+  "main": "lib/my-dialog-power.common.js",
+  "style":"lib/my-dialog-power.css",
   "private": false,
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "publish": "vue-cli-service build --target lib"
+    "publish": "vue-cli-service build --target lib --dest lib ./src/main.js"
   },
   "dependencies": {
     "core-js": "^3.6.4",
