--- a/my-dialog-power/package.json
+++ b/my-dialog-power/package.json
@@ -8,7 +8,7 @@
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "publish": "vue-cli-service build --target lib --dest lib ./src/main.js"
+    "publish": "vue-cli-service build --target lib --dest lib ./src/index.js"
   },
   "dependencies": {
     "core-js": "^3.6.4",
