add file animate

--- a/my-dialog-power/package.json
+++ b/my-dialog-power/package.json
@@ -11,6 +11,7 @@
     "publish": "vue-cli-service build --target lib --dest lib ./src/index.js"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11"
   },
